--- a/content/系統功能展示.html
+++ b/content/系統功能展示.html
@@ -69,7 +69,7 @@ function doSearch() {
 $(document).ready(doSearch);
 </script>
 
-</head><header><h1>CMSimfly - 動靜皆宜的簡潔網際內容管理</h1> <confmenu>
+</head><header><h1>2019 Spring 協同產品設計實習流程</h1> <confmenu>
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="sitemap.html">Site Map</a></li>
@@ -78,6 +78,12 @@ $(document).ready(doSearch);
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{2,}" title="Press enter key to search" required></div><li><a href='簡介.html'>簡介</a><li><a href='目錄結構.html'>目錄結構</a><li><a href='頁面編輯.html'>頁面編輯</a><ul><li><a href='插入程式碼.html'>插入程式碼</a><ul><li><a href='Java 程式碼.html'>Java 程式碼</a><li><a href='Python 程式碼.html'>Python 程式碼</a><li><a href='C或C++程式碼.html'>C或C++程式碼</a><li><a href='Lua 程式碼.html'>Lua 程式碼</a><li><a href='Javascript 程式碼.html'>Javascript 程式碼</a><li><a href='Html 原始碼.html'>Html 原始碼</a></li></li></ul></ul><li><a href='網際簡報.html'>網際簡報</a><li><a href='網誌編輯.html'>網誌編輯</a><li><a href='已知錯誤.html'>已知錯誤</a></li></ul></nav><section><div id="tipue_search_content"> <a href='目錄結構.html'>Next</a> >> 目錄結構<br /><h1>簡介</h1>
-<p>CMSimfly (<a href="https://github.com/chiamingyen/cmsimfly">https://github.com/chiamingyen/cmsimfly)</a> 是一套簡單的網際內容管理系統, 採用 Flask 網際框架, 以 Beautifulsoup 解讀分頁內容.</p>
-<p><img alt="" height="471" src="./../images/gocycle4.png" width="587"/></p><br /> <a href='目錄結構.html'>Next</a> >> 目錄結構</div></section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{2,}" title="Press enter key to search" required></div><li><a href='手足球系統模擬.html'>手足球系統模擬</a><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li><a href='專案報告書.html'>專案報告書</a></li></ul></nav><section><div id="tipue_search_content">送球機構設計與模擬 << <a href='送球機構設計與模擬.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM<br /><h1>系統功能展示</h1>
+<p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>以下提供所完成的 V-rep 系統模擬影片與相關檔案下載連結</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Lc4GaaS7-jA" width="560"></iframe></p>
+<p>國立虎尾科技大學機械設計工程系 - 2019 Spring 第九週手足球運動模擬參考檔案</p>
+<p>足球員採用 Onshape 建立, 其他零組件採用 Solvespace 建立</p>
+<p>參考檔案位於: <a href="https://github.com/mdecourse/cd2019/tree/gh-pages./../downloads/foosball_solvespace_vrep">https://github.com/mdecourse/cd2019/tree/gh-pages./../downloads/foosball_solvespace_vrep</a></p>
+<p>V-rep 場景檔案: <a href="https://github.com/mdecourse/cd2019/blob/gh-pages./../downloads/foosball_solvespace_vrep/kmol_foosball_w9.ttt">https://github.com/mdecourse/cd2019/blob/gh-pages./../downloads/foosball_solvespace_vrep/kmol_foosball_w9.ttt</a></p>
+<p>以 V-rep 3.6.1 以上版本開啟檔案後執行, 鍵盤 a 與 d 鍵控制左右平移, w 與 s 鍵控制旋轉.</p><br />送球機構設計與模擬 << <a href='送球機構設計與模擬.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM</div></section></div></body></html>
