--- a/content/手足球系統模擬.html
+++ b/content/手足球系統模擬.html
@@ -69,7 +69,7 @@ function doSearch() {
 $(document).ready(doSearch);
 </script>
 
-</head><header><h1>CMSimfly - 動靜皆宜的簡潔網際內容管理</h1> <confmenu>
+</head><header><h1>2019 Spring 協同產品設計實習流程</h1> <confmenu>
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="sitemap.html">Site Map</a></li>
@@ -78,10 +78,12 @@ $(document).ready(doSearch);
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{2,}" title="Press enter key to search" required></div><li><a href='簡介.html'>簡介</a><li><a href='目錄結構.html'>目錄結構</a><li><a href='頁面編輯.html'>頁面編輯</a><ul><li><a href='插入程式碼.html'>插入程式碼</a><ul><li><a href='Java 程式碼.html'>Java 程式碼</a><li><a href='Python 程式碼.html'>Python 程式碼</a><li><a href='C或C++程式碼.html'>C或C++程式碼</a><li><a href='Lua 程式碼.html'>Lua 程式碼</a><li><a href='Javascript 程式碼.html'>Javascript 程式碼</a><li><a href='Html 原始碼.html'>Html 原始碼</a></li></li></ul></ul><li><a href='網際簡報.html'>網際簡報</a><li><a href='網誌編輯.html'>網誌編輯</a><li><a href='已知錯誤.html'>已知錯誤</a></li></ul></nav><section><div id="tipue_search_content">網際簡報 << <a href='網際簡報.html'>Previous</a> <a href='已知錯誤.html'>Next</a> >> 已知錯誤<br /><h1>網誌編輯</h1>
-<p>CMSimfly 採用 <a href="https://blog.getpelican.com/">Pelican blog</a> 系統, 編輯檔案位於 config/pelican.leo, 對應的</p>
-<p> Markdown 原始檔案位於 markdown 目錄中, 而經 Pelican 轉換出的網誌超文件檔案則位於 blog 目錄中.</p>
-<p>執行 Pelican 之前, 必須先安裝下列模組:</p>
-<p style="padding-left: 30px;">pip install pelican Markdown</p>
-<p>其餘在網誌文章中所需要的 Javascript 或 Brython 程式檔案, 則與 CMSimfly 及 Reveal.js 共用, 位於 static 目錄下.</p>
-<p>上傳檔案與圖檔的引用則與 CMSimfly 架構相同.</p><br />網際簡報 << <a href='網際簡報.html'>Previous</a> <a href='已知錯誤.html'>Next</a> >> 已知錯誤</div></section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{2,}" title="Press enter key to search" required></div><li><a href='手足球系統模擬.html'>手足球系統模擬</a><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li><a href='專案報告書.html'>專案報告書</a></li></ul></nav><section><div id="tipue_search_content"> <a href='零組件尺寸分析.html'>Next</a> >> 零組件尺寸分析<br /><h1>手足球系統模擬</h1>
+<p>專案成果摘要</p>
+<p>專案執行動機</p>
+<p>相關文獻探討</p>
+<p>專案執行成員</p>
+<p>執行使用套件</p>
+<p>專案執行過程規劃</p>
+<p>專案執行內容</p>
+<p>專案結論</p><br /> <a href='零組件尺寸分析.html'>Next</a> >> 零組件尺寸分析</div></section></div></body></html>
