add group links

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,13 @@
-<h1>手足球系統模擬</h1>
+<h1>各組期末報告說明</h1>
+<h4>2a 分組倉儲</h4>
+<p><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g1">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g1</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g1">2ag1</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g2">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g2</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g2/content">2ag2</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g3_1">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g3_1</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g3_1">2ag3</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g4">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g4</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g4">2ag4</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g5">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g5</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g5">2ag5</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g6">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g6</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g6">2ag6</a>)</p>
+<h4>2b 分組倉儲</h4>
+<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g1</a>  (2bg1)</p>
+<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g2">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g2</a>  (2bg2)</p>
+<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a> (2bg3)</p>
+<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g4">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g4</a>  (2bg4)</p>
+<p><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g5">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g5</a> (2bg5)</p>
+<p></p><h1>手足球系統模擬</h1>
 <p>專案成果摘要</p>
 <p>專案執行動機</p>
 <p>相關文獻探討</p>
@@ -30,8 +39,10 @@
 <p>完成手足球零組件細部設計 (可參考 <a href="https://youtu.be/PgnvZV5s13c">https://youtu.be/PgnvZV5s13c</a> 中各項設計), 並將設計 BOM (Bill of Materials) 納入 CMSimfly 網際內容管理系統. (系統 BOM 文件整理)</p>
 <p>手足球 DIY 影片:</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PgnvZV5s13c" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/DLchkFqzTNA" width="560"></iframe></p>
 <h4>參考資料:</h4>
-<p><a href="https://www.matterhackers.com/articles/how-to-build-a-foosball-table">https://www.matterhackers.com/articles/how-to-build-a-foosball-table</a> </p>
+<p><a href="https://www.matterhackers.com/articles/how-to-build-a-foosball-table">https://www.matterhackers.com/articles/how-to-build-a-foosball-table</a></p>
+<p><a href="https://www.matterhackers.com/store/digital-designs/foosball-table-parts">https://www.matterhackers.com/store/digital-designs/foosball-table-parts</a></p>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
 <h4>零件 BOM</h4>
