--- a/content/手足球系統模擬.html
+++ b/content/手足球系統模擬.html
@@ -69,7 +69,7 @@ function doSearch() {
 $(document).ready(doSearch);
 </script>
 
-</head><header><h1>2019 Spring 協同產品設計實習流程</h1> <confmenu>
+</head><header><h1>2019 Spring 協同產品設計實習期末報告示範網站</h1> <confmenu>
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="sitemap.html">Site Map</a></li>
@@ -78,7 +78,7 @@ $(document).ready(doSearch);
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{2,}" title="Press enter key to search" required></div><li><a href='手足球系統模擬.html'>手足球系統模擬</a><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li><a href='專案報告書.html'>專案報告書</a></li></ul></nav><section><div id="tipue_search_content"> <a href='零組件尺寸分析.html'>Next</a> >> 零組件尺寸分析<br /><h1>手足球系統模擬</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><div class="tipue_search_group"><input style="width: 6vw;" type="text" name="q" id="tipue_search_input" pattern=".{2,}" title="Press enter key to search" required></div><li><a href='各組期末報告說明.html'>各組期末報告說明</a><li><a href='手足球系統模擬.html'>手足球系統模擬</a><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li><a href='專案報告書.html'>專案報告書</a></li></ul></nav><section><div id="tipue_search_content">各組期末報告說明 << <a href='各組期末報告說明.html'>Previous</a> <a href='零組件尺寸分析.html'>Next</a> >> 零組件尺寸分析<br /><h1>手足球系統模擬</h1>
 <p>專案成果摘要</p>
 <p>專案執行動機</p>
 <p>相關文獻探討</p>
@@ -86,4 +86,4 @@ $(document).ready(doSearch);
 <p>執行使用套件</p>
 <p>專案執行過程規劃</p>
 <p>專案執行內容</p>
-<p>專案結論</p><br /> <a href='零組件尺寸分析.html'>Next</a> >> 零組件尺寸分析</div></section></div></body></html>
+<p>專案結論</p><br />各組期末報告說明 << <a href='各組期末報告說明.html'>Previous</a> <a href='零組件尺寸分析.html'>Next</a> >> 零組件尺寸分析</div></section></div></body></html>
