add w11 Q and A for final project

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,13 +1,69 @@
 <h1>各組期末報告說明</h1>
+<p>本網站倉儲: <a href="https://github.com/scrum-1/cd2019">https://github.com/scrum-1/cd2019</a></p>
+<p>各組員必須在 W17 上課之前完成期末報告簡報影片上傳與連結, 並放入本網站之"專案口頭簡報"頁面.</p>
+<p>各組必須在 W17 上課之前完成分組期末報告 pdf 檔案, 上傳至各分組的倉儲中, 並將連結提供至本網站之"專案報告書"頁面.</p>
+<p>期末報告期間每週對各成員之評分依據下列要項:</p>
+<ol>
+<li>各組員在各分組網站中所呈現之任務執行內容, 並拍攝操作影音 mp4, 將影片標題署名"國立虎尾科技大學-機械設計工程系-協同產品設計實習 A - 學號及影片主題" 後上傳, 並將影片嵌入本網站各章節頁面中.</li>
+<li>每組將提供組長本網站倉儲協同管理權, 專門處理各組員在各分支或 master 分支中的 pull requests, 各組員必須透過以 ag1, ag2 .... 命名之分支對本倉儲改版, 確定內容無誤後, 再設法由組長處理各 pull requests 之內容合併, Github Pages 將設為與 master 分支對應, 各組員之評分將依據各 pull requests 中所列出之學號與內容判定.</li>
+<li>請各組員勿將影片檔、圖片檔案或各式檔案送至本倉儲, 影片檔案請上傳至 Youtube, 圖片檔案請送至各組倉儲網站, 各式檔案則請送至各組員 Google Drive 區, 並以嵌入 (iframe), 將影片放入本網站, 其餘圖片或檔案則透過 img 或 a 標註放入各相關頁面.</li>
+</ol>
+<hr/>
 <h4>2a 分組倉儲</h4>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g1">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g1</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g1">2ag1</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g2">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g2</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g2/content">2ag2</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g3_1">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g3_1</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g3_1">2ag3</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g4">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g4</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g4">2ag4</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g5">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g5</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g5">2ag5</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g6">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g6</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g6">2ag6</a>)</p>
+<p style="padding-left: 30px;"><span>期末專案協同倉儲: </span><a href="https://github.com/scrum-1/cd2019a">https://github.com/scrum-1/cd2019a</a><span> (</span><a href="http://cpgx.kmol.info/cd2019a">cd2019a</a><span>)</span></p>
 <h4>2b 分組倉儲</h4>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g1</a>  (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1">2bg1</a>)</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g2">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g2</a>  (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2">2bg2</a>)</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a> (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1">2bg3</a>)</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g4">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g4</a>  (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4">2bg4</a>)</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g5">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g5</a> (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5">2bg5</a>)</p>
-<p style="padding-left: 30px;">期末專案協同倉儲: <a href="https://github.com/scrum-1/cd2019b">https://github.com/scrum-1/cd2019b</a> (<a href="http://cpgx.kmol.info/cd2019b">cd2019b</a>)</p><h1>執行規劃</h1>
+<p style="padding-left: 30px;">期末專案協同倉儲: <a href="https://github.com/scrum-1/cd2019b">https://github.com/scrum-1/cd2019b</a> (<a href="http://cpgx.kmol.info/cd2019b">cd2019b</a>)</p><h2>H 標註降階程式</h2>
+<p>當 CMSimfly 管理者需要利用程式關鍵字代換的功能, 將各 H 標註標題頁面降階次時, 可以使用下列程式:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import re
+
+# 打開檔案取內容
+with open('config/content.htm', 'r', encoding="utf-8") as f:
+    content = f.read()
+
+rep = {"h1": "h2", "h2": "h3", "h3": "h4"} # define desired replacements here
+
+# use these three lines to do the replacement
+# re.escape(k) 在 k 字串中的特殊符號前加上反斜線
+# rep.items() returns a list of rep dict's (key, value) tuple pairs
+rep = dict((re.escape(k), v) for k, v in rep.items())
+pattern = re.compile("|".join(rep.keys()))
+#text = pattern.sub(lambda m: rep[re.escape(m.group(0))], text)
+output = pattern.sub(lambda m: rep[re.escape(m.group(0))], content)
+# 將 output 前置一頁 h1 後存入 content.htm
+output = "&lt;h1&gt;期中報告&lt;/h1&gt;" + output
+with open('config/content.htm', 'w', encoding="utf-8") as f:
+    f.write(output)</pre>
+<p>至於關鍵字替換升階時則需注意原頁面中已經使用 H4 作為段落標題之內容, 是否已經與先前降階之 H3 標註混合在文章內容中, 此時若選擇將所有 H4 標註升為 H3, 這些原先在內容中的 H4 標註將會被提升為分頁 H3 的標題.</p>
+<p>對於在專案中需要進行多次升階與降階的內容, 建立在頁面標題降階之前, 保存各原先頁面標題內容與階次, 待需要升降頁面階次時, 可以用來篩選從 H4 升為 H3 流程時的參考.</p>
+<h2>期末協同專案 Q&amp;A</h2>
+<p>Q: 是否各分組中每一位組員都必須將期末專案中的每一項任務, 從頭執行一遍?</p>
+<p>A: </p>
+<p style="padding-left: 30px;">簡短的答案為: 並非必要, 但是在期中考前的各項準備任務, 每一組員必須利用操作影片、倉儲與網站內容, 證明已經做好參與期末協同專案的準備.</p>
+<p style="padding-left: 30px;">此外, 本課程將依照以下的期末協同專案規劃, 在組員個人倉儲與網站、分組倉儲與網站、以及期末協同專案網站中, 透過操作影片<span>、</span>Github 提交歷程與內容進行自評、互評與授課教師驗證評分流程.</p>
+<p>因為從本示範網站可以了解, 2019 Spring 協同產品設計實習課程所規劃的分組期末協同專案, 題目為「<span style="background-color: #ccffcc;">手足球系統設計與模擬</span>」, 從<a href="http://mde.tw/cd2019/content/%E5%AF%A6%E7%BF%92%E4%BB%BB%E5%8B%99%E4%BA%8C.html">實習任務二中的專案題目說明</a>中, 所要進行的協同實習目標為:</p>
+<p><span style="background-color: #ffff00;">利用 <a href="https://www.onshape.com/" style="background-color: #ffff00;">OnShape</a> 或其他 MCAD (Mechanical Computer Aided Design) 套件, 以協同模式建立手足球系統, 並將零組件輸入 <a href="http://www.coppeliarobotics.com/" style="background-color: #ffff00;">V-rep</a>, 以建立可以兩兩競賽用的動態系統.</span></p>
+<p><span>此處的「兩兩競賽用」包含, 兩名操作者可以透過鍵盤競賽、操作者可以與電腦程式進行競賽、以及兩組電腦程式可以進行競賽.</span></p>
+<p><span>其中牽涉四項主要任務與八個執行項目:</span></p>
+<p><span>1. 執行規劃 (<span style="background-color: #ccffcc;">所有組員</span>必須參與並提供參考意見)</span></p>
+<p style="padding-left: 30px;"><span>執行項目一: 手足球系統設計與模擬流程規劃 </span></p>
+<p><span>2. 設計與繪圖 (<span style="background-color: #ccffcc;">所有組員</span>必須參與並分別執行各項目中的分項內容)</span></p>
+<p style="padding-left: 30px;"><span>執行項目二: 零組件尺寸分析</span></p>
+<p style="padding-left: 30px;"><span>執行項目三: 參數設計與繪圖</span></p>
+<p style="padding-left: 30px;"><span>執行項目四: 細部設計與 BOM</span></p>
+<p><span>3. V-rep 動態模擬 (<span style="background-color: #ccffcc;">所有組員</span>必須參與並分別執行各項目中的分項內容)</span></p>
+<p style="padding-left: 30px;"><span>執行項目五: 送球機構設計與模擬</span></p>
+<p style="padding-left: 30px;"><span>項目六: 系統功能展示</span></p>
+<p><span>4. 結案報告</span></p>
+<p style="padding-left: 30px;"><span>執行項目七: 專案口頭簡報 (<span style="background-color: #ccffcc;">各組員</span>必須自行完成期末口頭簡報影片上傳並嵌入協同網站中)</span></p>
+<p style="padding-left: 30px;"><span>執行項目八: 專案報告書 (<span style="background-color: #ccffcc;">各分組</span>必須從協同網站內容中, 整理一份 html 分組期末專案報告書, 以及一份 pdf 分組期末專案報告書)</span></p>
+<p><span></span></p>
+<p></p><h1>執行規劃</h1>
 <h2>手足球系統模擬</h2>
 <p>專案成果摘要</p>
 <p>專案執行動機</p>
