--- a/content/index.html
+++ b/content/index.html
@@ -136,7 +136,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='各組期末報告說明.html'>各組期末報告說明</a><li class='has-children'><a href='執行規劃.html'>執行規劃</a><ul class='dropdown'><li><a href='手足球系統模擬.html'>手足球系統模擬</a></li></ul><li class='has-children'><a href='設計與繪圖.html'>設計與繪圖</a><ul class='dropdown'><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a></li></ul><li class='has-children'><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><ul class='dropdown'><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li class='has-children'><a href='結案報告.html'>結案報告</a><ul class='dropdown'><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li><a href='專案報告書.html'>專案報告書</a></li>
+                     <li class='has-children'><a href='各組期末報告說明.html'>各組期末報告說明</a><ul class='dropdown'><li><a href='H 標註降階程式.html'>H 標註降階程式</a><li><a href='期末協同專案 Q&A.html'>期末協同專案 Q&A</a></li></ul><li class='has-children'><a href='執行規劃.html'>執行規劃</a><ul class='dropdown'><li><a href='手足球系統模擬.html'>手足球系統模擬</a></li></ul><li class='has-children'><a href='設計與繪圖.html'>設計與繪圖</a><ul class='dropdown'><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a></li></ul><li class='has-children'><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><ul class='dropdown'><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li class='has-children'><a href='結案報告.html'>結案報告</a><ul class='dropdown'><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li><a href='專案報告書.html'>專案報告書</a></li>
                       </ul>
                 </nav>
               </div>
@@ -147,16 +147,27 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='執行規劃.html'>Next</a> >> 執行規劃<br /><h1>各組期末報告說明</h1>
+    <div id="tipue_search_content"> <a href='H 標註降階程式.html'>Next</a> >> H 標註降階程式<br /><h1>各組期末報告說明</h1>
+<p>本網站倉儲: <a href="https://github.com/scrum-1/cd2019">https://github.com/scrum-1/cd2019</a></p>
+<p>各組員必須在 W17 上課之前完成期末報告簡報影片上傳與連結, 並放入本網站之"專案口頭簡報"頁面.</p>
+<p>各組必須在 W17 上課之前完成分組期末報告 pdf 檔案, 上傳至各分組的倉儲中, 並將連結提供至本網站之"專案報告書"頁面.</p>
+<p>期末報告期間每週對各成員之評分依據下列要項:</p>
+<ol>
+<li>各組員在各分組網站中所呈現之任務執行內容, 並拍攝操作影音 mp4, 將影片標題署名"國立虎尾科技大學-機械設計工程系-協同產品設計實習 A - 學號及影片主題" 後上傳, 並將影片嵌入本網站各章節頁面中.</li>
+<li>每組將提供組長本網站倉儲協同管理權, 專門處理各組員在各分支或 master 分支中的 pull requests, 各組員必須透過以 ag1, ag2 .... 命名之分支對本倉儲改版, 確定內容無誤後, 再設法由組長處理各 pull requests 之內容合併, Github Pages 將設為與 master 分支對應, 各組員之評分將依據各 pull requests 中所列出之學號與內容判定.</li>
+<li>請各組員勿將影片檔、圖片檔案或各式檔案送至本倉儲, 影片檔案請上傳至 Youtube, 圖片檔案請送至各組倉儲網站, 各式檔案則請送至各組員 Google Drive 區, 並以嵌入 (iframe), 將影片放入本網站, 其餘圖片或檔案則透過 img 或 a 標註放入各相關頁面.</li>
+</ol>
+<hr/>
 <h4>2a 分組倉儲</h4>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g1">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g1</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g1">2ag1</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g2">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g2</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g2/content">2ag2</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g3_1">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g3_1</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g3_1">2ag3</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g4">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g4</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g4">2ag4</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g5">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g5</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g5">2ag5</a>)<br/><br/><a href="https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g6">https://github.com/mdekmol/cd2019a-task1-2019cda_t1_g6</a> (<a href="https://mdekmol.github.io/cd2019a-task1-2019cda_t1_g6">2ag6</a>)</p>
+<p style="padding-left: 30px;"><span>期末專案協同倉儲: </span><a href="https://github.com/scrum-1/cd2019a">https://github.com/scrum-1/cd2019a</a><span> (</span><a href="http://cpgx.kmol.info/cd2019a">cd2019a</a><span>)</span></p>
 <h4>2b 分組倉儲</h4>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g1</a>  (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1">2bg1</a>)</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g2">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g2</a>  (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2">2bg2</a>)</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a> (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1">2bg3</a>)</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g4">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g4</a>  (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4">2bg4</a>)</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g5">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g5</a> (<a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5">2bg5</a>)</p>
-<p style="padding-left: 30px;">期末專案協同倉儲: <a href="https://github.com/scrum-1/cd2019b">https://github.com/scrum-1/cd2019b</a> (<a href="http://cpgx.kmol.info/cd2019b">cd2019b</a>)</p><br /> <a href='執行規劃.html'>Next</a> >> 執行規劃</div>
+<p style="padding-left: 30px;">期末專案協同倉儲: <a href="https://github.com/scrum-1/cd2019b">https://github.com/scrum-1/cd2019b</a> (<a href="http://cpgx.kmol.info/cd2019b">cd2019b</a>)</p><br /> <a href='H 標註降階程式.html'>Next</a> >> H 標註降階程式</div>
         
     <!-- footer -->
       <div class="container">
