--- a/content/期末協同專案 Q&A.html
+++ b/content/期末協同專案 Q&A.html
@@ -147,25 +147,29 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">參數設計與繪圖 << <a href='參數設計與繪圖.html'>Previous</a> <a href='V-rep 動態模擬.html'>Next</a> >> V-rep 動態模擬<br /><h1>細部設計與 BOM</h1>
-<p>完成手足球零組件細部設計 (可參考 <a href="https://youtu.be/PgnvZV5s13c">https://youtu.be/PgnvZV5s13c</a> 中各項設計), 並將設計 BOM (Bill of Materials) 納入 CMSimfly 網際內容管理系統. (系統 BOM 文件整理)</p>
-<p>手足球 DIY 影片:</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/PgnvZV5s13c" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/DLchkFqzTNA" width="560"></iframe></p>
-<h4>參考資料:</h4>
-<p><a href="https://www.matterhackers.com/articles/how-to-build-a-foosball-table">https://www.matterhackers.com/articles/how-to-build-a-foosball-table</a></p>
-<p><a href="https://www.matterhackers.com/store/digital-designs/foosball-table-parts">https://www.matterhackers.com/store/digital-designs/foosball-table-parts</a></p>
-<h4>手足球零件格式說明</h4>
-<p>手足球零件格式說明</p>
-<h4>零件 BOM</h4>
-<p>手足球零組件材料表 (含零組件下載連結)</p>
-<h4>零件尺寸圖</h4>
-<p>零件尺寸圖</p>
-<h4>零件部分組裝圖</h4>
-<p>零件部分組裝圖</p>
-<h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p>
-<br />參數設計與繪圖 << <a href='參數設計與繪圖.html'>Previous</a> <a href='V-rep 動態模擬.html'>Next</a> >> V-rep 動態模擬</div>
+    <div id="tipue_search_content">H 標註降階程式 << <a href='H 標註降階程式.html'>Previous</a> <a href='執行規劃.html'>Next</a> >> 執行規劃<br /><h1>期末協同專案 Q&A</h1>
+<p>Q: 是否各分組中每一位組員都必須將期末專案中的每一項任務, 從頭執行一遍?</p>
+<p>A: </p>
+<p style="padding-left: 30px;">簡短的答案為: 並非必要, 但是在期中考前的各項準備任務, 每一組員必須利用操作影片、倉儲與網站內容, 證明已經做好參與期末協同專案的準備.</p>
+<p style="padding-left: 30px;">此外, 本課程將依照以下的期末協同專案規劃, 在組員個人倉儲與網站、分組倉儲與網站、以及期末協同專案網站中, 透過操作影片<span>、</span>Github 提交歷程與內容進行自評、互評與授課教師驗證評分流程.</p>
+<p>因為從本示範網站可以了解, 2019 Spring 協同產品設計實習課程所規劃的分組期末協同專案, 題目為「<span style="background-color: #ccffcc;">手足球系統設計與模擬</span>」, 從<a href="http://mde.tw/cd2019/content/%E5%AF%A6%E7%BF%92%E4%BB%BB%E5%8B%99%E4%BA%8C.html">實習任務二中的專案題目說明</a>中, 所要進行的協同實習目標為:</p>
+<p><span style="background-color: #ffff00;">利用 <a href="https://www.onshape.com/" style="background-color: #ffff00;">OnShape</a> 或其他 MCAD (Mechanical Computer Aided Design) 套件, 以協同模式建立手足球系統, 並將零組件輸入 <a href="http://www.coppeliarobotics.com/" style="background-color: #ffff00;">V-rep</a>, 以建立可以兩兩競賽用的動態系統.</span></p>
+<p><span>此處的「兩兩競賽用」包含, 兩名操作者可以透過鍵盤競賽、操作者可以與電腦程式進行競賽、以及兩組電腦程式可以進行競賽.</span></p>
+<p><span>其中牽涉四項主要任務與八個執行項目:</span></p>
+<p><span>1. 執行規劃 (<span style="background-color: #ccffcc;">所有組員</span>必須參與並提供參考意見)</span></p>
+<p style="padding-left: 30px;"><span>執行項目一: 手足球系統設計與模擬流程規劃 </span></p>
+<p><span>2. 設計與繪圖 (<span style="background-color: #ccffcc;">所有組員</span>必須參與並分別執行各項目中的分項內容)</span></p>
+<p style="padding-left: 30px;"><span>執行項目二: 零組件尺寸分析</span></p>
+<p style="padding-left: 30px;"><span>執行項目三: 參數設計與繪圖</span></p>
+<p style="padding-left: 30px;"><span>執行項目四: 細部設計與 BOM</span></p>
+<p><span>3. V-rep 動態模擬 (<span style="background-color: #ccffcc;">所有組員</span>必須參與並分別執行各項目中的分項內容)</span></p>
+<p style="padding-left: 30px;"><span>執行項目五: 送球機構設計與模擬</span></p>
+<p style="padding-left: 30px;"><span>項目六: 系統功能展示</span></p>
+<p><span>4. 結案報告</span></p>
+<p style="padding-left: 30px;"><span>執行項目七: 專案口頭簡報 (<span style="background-color: #ccffcc;">各組員</span>必須自行完成期末口頭簡報影片上傳並嵌入協同網站中)</span></p>
+<p style="padding-left: 30px;"><span>執行項目八: 專案報告書 (<span style="background-color: #ccffcc;">各分組</span>必須從協同網站內容中, 整理一份 html 分組期末專案報告書, 以及一份 pdf 分組期末專案報告書)</span></p>
+<p><span></span></p>
+<p></p><br />H 標註降階程式 << <a href='H 標註降階程式.html'>Previous</a> <a href='執行規劃.html'>Next</a> >> 執行規劃</div>
         
     <!-- footer -->
       <div class="container">
