--- a/content/V-rep 動態模擬.html
+++ b/content/V-rep 動態模擬.html
@@ -136,7 +136,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='各組期末報告說明.html'>各組期末報告說明</a><ul class='dropdown'><li><a href='H 標註降階程式.html'>H 標註降階程式</a><li><a href='期末協同專案 Q&A.html'>期末協同專案 Q&A</a></li></ul><li class='has-children'><a href='執行規劃.html'>執行規劃</a><ul class='dropdown'><li><a href='手足球系統模擬.html'>手足球系統模擬</a></li></ul><li class='has-children'><a href='設計與繪圖.html'>設計與繪圖</a><ul class='dropdown'><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a></li></ul><li class='has-children'><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><ul class='dropdown'><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li class='has-children'><a href='結案報告.html'>結案報告</a><ul class='dropdown'><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li><a href='專案報告書.html'>專案報告書</a></li>
+                     <li class='has-children'><a href='各組期末報告說明.html'>各組期末報告說明</a><ul class='dropdown'><li><a href='H 標註降階程式.html'>H 標註降階程式</a><li><a href='期末協同專案 Q&A.html'>期末協同專案 Q&A</a></li></ul><li class='has-children'><a href='執行規劃.html'>執行規劃</a><ul class='dropdown'><li><a href='github 課程.html'>github 課程</a><li><a href='手足球系統模擬.html'>手足球系統模擬</a></li></ul><li class='has-children'><a href='設計與繪圖.html'>設計與繪圖</a><ul class='dropdown'><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a></li></ul><li class='has-children'><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><ul class='dropdown'><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li class='has-children'><a href='結案報告.html'>結案報告</a><ul class='dropdown'><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li class='has-children'><a href='專案報告書.html'>專案報告書</a><ul class='dropdown'><li><a href='Pandoc.html'>Pandoc</a><li><a href='TinyTeX.html'>TinyTeX</a></li>
                       </ul>
                 </nav>
               </div>
@@ -148,9 +148,20 @@ init_mathjax();
           
         </header>
     <div id="tipue_search_content">細部設計與 BOM << <a href='細部設計與 BOM.html'>Previous</a> <a href='送球機構設計與模擬.html'>Next</a> >> 送球機構設計與模擬<br /><h1>V-rep 動態模擬</h1>
+<p>建立模擬檔案時, 必須注意所使用的 V-rep 版本, 因為官網最近改版頻繁, 目前已推出 3.6.1 rev 3, 使用舊版可能無法開啟新版所建立的模型檔案. 因此模型檔案連結應該要註明所使用的 V-rep 版本.</p>
+<p><a href="http://www.coppeliarobotics.com/downloads.html">http://www.coppeliarobotics.com/downloads.html</a></p>
 <p>手足球系統中各球員擊球與操控桿移動旋轉的 V-rep 動態模擬 (系統功能模擬)</p>
 <p>以文字及操作影片說明如何從 Onshape 設計繪製零組件後, 如何轉入 V-rep, 如何編寫程式, 如何進行各種功能測試, 最後完成手足球的 V-rep 動態模擬系統.</p>
-<br />細部設計與 BOM << <a href='細部設計與 BOM.html'>Previous</a> <a href='送球機構設計與模擬.html'>Next</a> >> 送球機構設計與模擬</div>
+<p>V-rep Scripts 相關資料:</p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/childScripts.htm">http://www.coppeliarobotics.com/helpFiles/en/childScripts.htm</a></p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/scripts.htm">http://www.coppeliarobotics.com/helpFiles/en/scripts.htm</a></p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/scriptExecution.htm">http://www.coppeliarobotics.com/helpFiles/en/scriptExecution.htm</a></p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/scriptSimulationParameters.htm">http://www.coppeliarobotics.com/helpFiles/en/scriptSimulationParameters.htm</a></p>
+<p>建立  Custom UI 方法:</p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/customUIPlugin.htm">http://www.coppeliarobotics.com/helpFiles/en/customUIPlugin.htm</a></p>
+<p>Lua ASCII Table:</p>
+<p><a href="https://github.com/mdecourse/cd2019/issues/5">https://github.com/mdecourse/cd2019/issues/5</a></p>
+<p></p><br />細部設計與 BOM << <a href='細部設計與 BOM.html'>Previous</a> <a href='送球機構設計與模擬.html'>Next</a> >> 送球機構設計與模擬</div>
         
     <!-- footer -->
       <div class="container">
