--- a/content/github 課程.html
+++ b/content/github 課程.html
@@ -147,25 +147,23 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">參數設計與繪圖 << <a href='參數設計與繪圖.html'>Previous</a> <a href='V-rep 動態模擬.html'>Next</a> >> V-rep 動態模擬<br /><h1>細部設計與 BOM</h1>
-<p>完成手足球零組件細部設計 (可參考 <a href="https://youtu.be/PgnvZV5s13c">https://youtu.be/PgnvZV5s13c</a> 中各項設計), 並將設計 BOM (Bill of Materials) 納入 CMSimfly 網際內容管理系統. (系統 BOM 文件整理)</p>
-<p>手足球 DIY 影片:</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/PgnvZV5s13c" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/DLchkFqzTNA" width="560"></iframe></p>
-<h4>參考資料:</h4>
-<p><a href="https://www.matterhackers.com/articles/how-to-build-a-foosball-table">https://www.matterhackers.com/articles/how-to-build-a-foosball-table</a></p>
-<p><a href="https://www.matterhackers.com/store/digital-designs/foosball-table-parts">https://www.matterhackers.com/store/digital-designs/foosball-table-parts</a></p>
-<h4>手足球零件格式說明</h4>
-<p>手足球零件格式說明</p>
-<h4>零件 BOM</h4>
-<p>手足球零組件材料表 (含零組件下載連結)</p>
-<h4>零件尺寸圖</h4>
-<p>零件尺寸圖</p>
-<h4>零件部分組裝圖</h4>
-<p>零件部分組裝圖</p>
-<h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p>
-<br />參數設計與繪圖 << <a href='參數設計與繪圖.html'>Previous</a> <a href='V-rep 動態模擬.html'>Next</a> >> V-rep 動態模擬</div>
+    <div id="tipue_search_content">執行規劃 << <a href='執行規劃.html'>Previous</a> <a href='手足球系統模擬.html'>Next</a> >> 手足球系統模擬<br /><h1>github 課程</h1>
+<p>管理合併與衝突</p>
+<p><a href="https://lab.github.com/githubtraining/managing-merge-conflicts">https://lab.github.com/githubtraining/managing-merge-conflicts</a></p>
+<p>Merge conflicts are a normal part of working in Git. Learn why they happen and how to resolve them with ease.</p>
+<p>Merge conflicts happen when two people make changes to the same file on GitHub—a common occurrence when you’re working with other developers. While resolving differences might involve some discussion, merge conflicts don’t have to be scary.</p>
+<p>This course guides you through the steps to finding the best merge conflict solution, so your team can keep building.</p>
+<p>After you complete this course, you’ll be able to:</p>
+<ol>
+<li>Understand how merging happens and what causes merge conflicts</li>
+<li>Resolve simple and complex merge conflicts with ease</li>
+<li>Share best practices to reduce merge conflicts with your team</li>
+</ol>
+<p>Resolve a conflict</p>
+<p>Resolve your first merge conflict</p>
+<p><a href="https://lab.github.com/githubtraining/reviewing-pull-requests">https://lab.github.com/githubtraining/reviewing-pull-requests</a></p>
+<p><a href="https://lab.github.com/githubtraining/create-a-release-based-workflow">https://lab.github.com/githubtraining/create-a-release-based-workflow</a></p>
+<p></p><br />執行規劃 << <a href='執行規劃.html'>Previous</a> <a href='手足球系統模擬.html'>Next</a> >> 手足球系統模擬</div>
         
     <!-- footer -->
       <div class="container">
