--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,5 @@
 <h1>各組期末報告說明</h1>
+<p>本網站倉儲: <a href="https://github.com/scrum-1/cd2019">https://github.com/scrum-1/cd2019</a></p>
 <p>各組員必須在 W17 上課之前完成期末報告簡報影片上傳與連結, 並放入本網站之"專案口頭簡報"頁面.</p>
 <p>各組必須在 W17 上課之前完成分組期末報告 pdf 檔案, 上傳至各分組的倉儲中, 並將連結提供至本網站之"專案報告書"頁面.</p>
 <p>期末報告期間每週對各成員之評分依據下列要項:</p>
@@ -63,7 +64,23 @@ with open('config/content.htm', 'w', encoding="utf-8") as f:
 <p style="padding-left: 30px;"><span>執行項目八: 專案報告書 (<span style="background-color: #ccffcc;">各分組</span>必須從協同網站內容中, 整理一份 html 分組期末專案報告書, 以及一份 pdf 分組期末專案報告書)</span></p>
 <p><span></span></p>
 <p></p><h1>執行規劃</h1>
-<h2>手足球系統模擬</h2>
+<p></p><h2>github 課程</h2>
+<p>管理合併與衝突</p>
+<p><a href="https://lab.github.com/githubtraining/managing-merge-conflicts">https://lab.github.com/githubtraining/managing-merge-conflicts</a></p>
+<p>Merge conflicts are a normal part of working in Git. Learn why they happen and how to resolve them with ease.</p>
+<p>Merge conflicts happen when two people make changes to the same file on GitHub—a common occurrence when you’re working with other developers. While resolving differences might involve some discussion, merge conflicts don’t have to be scary.</p>
+<p>This course guides you through the steps to finding the best merge conflict solution, so your team can keep building.</p>
+<p>After you complete this course, you’ll be able to:</p>
+<ol>
+<li>Understand how merging happens and what causes merge conflicts</li>
+<li>Resolve simple and complex merge conflicts with ease</li>
+<li>Share best practices to reduce merge conflicts with your team</li>
+</ol>
+<p>Resolve a conflict</p>
+<p>Resolve your first merge conflict</p>
+<p><a href="https://lab.github.com/githubtraining/reviewing-pull-requests">https://lab.github.com/githubtraining/reviewing-pull-requests</a></p>
+<p><a href="https://lab.github.com/githubtraining/create-a-release-based-workflow">https://lab.github.com/githubtraining/create-a-release-based-workflow</a></p>
+<p></p><h2>手足球系統模擬</h2>
 <p>專案成果摘要</p>
 <p>專案執行動機</p>
 <p>相關文獻探討</p>
@@ -72,9 +89,12 @@ with open('config/content.htm', 'w', encoding="utf-8") as f:
 <p>專案執行過程規劃</p>
 <p>專案執行內容</p>
 <p>專案結論</p><h1>設計與繪圖</h1>
-<h2>零組件尺寸分析</h2>
+<p><a href="/downloads/foosball_solvespace_vrep.7z">第一階段尺寸分析與 V-rep 模型測試.7z</a></p><h2>零組件尺寸分析</h2>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
-<h2>參數設計與繪圖</h2>
+<p>足球員與足球尺寸配置分析:</p>
+<p><img alt="" height="415" src="/images/solvespace_foosball_dim1.png" width="800"/></p>
+<p>球場側板控制桿間距:</p>
+<p><img caption="false" height="415" src="/images/solvespace_foosball_dim2.png" width="800"/></p><h2>參數設計與繪圖</h2>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
 <h2>細部設計與 BOM</h2>
@@ -98,7 +118,16 @@ with open('config/content.htm', 'w', encoding="utf-8") as f:
 <h1>V-rep 動態模擬</h1>
 <p>手足球系統中各球員擊球與操控桿移動旋轉的 V-rep 動態模擬 (系統功能模擬)</p>
 <p>以文字及操作影片說明如何從 Onshape 設計繪製零組件後, 如何轉入 V-rep, 如何編寫程式, 如何進行各種功能測試, 最後完成手足球的 V-rep 動態模擬系統.</p>
-<h2>送球機構設計與模擬</h2>
+<p>V-rep Scripts 相關資料:</p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/childScripts.htm">http://www.coppeliarobotics.com/helpFiles/en/childScripts.htm</a></p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/scripts.htm">http://www.coppeliarobotics.com/helpFiles/en/scripts.htm</a></p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/scriptExecution.htm">http://www.coppeliarobotics.com/helpFiles/en/scriptExecution.htm</a></p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/scriptSimulationParameters.htm">http://www.coppeliarobotics.com/helpFiles/en/scriptSimulationParameters.htm</a></p>
+<p>建立  Custom UI 方法:</p>
+<p><a href="http://www.coppeliarobotics.com/helpFiles/en/customUIPlugin.htm">http://www.coppeliarobotics.com/helpFiles/en/customUIPlugin.htm</a></p>
+<p>Lua ASCII Table:</p>
+<p><a href="https://github.com/mdecourse/cd2019/issues/5">https://github.com/mdecourse/cd2019/issues/5</a></p>
+<p></p><h2>送球機構設計與模擬</h2>
 <p>手足球發球與進球後自動送球機構設計與 V-rep 動態模擬 (機構與傳動系統設計與模擬)</p>
 <p>可採用螺旋機構或多連桿機構設計, 透過進球感測器感應後, 將儲存於螺桿上的球送回球檯.</p>
 <p>以下為參考機構模擬影片:</p>
@@ -119,3 +148,23 @@ with open('config/content.htm', 'w', encoding="utf-8") as f:
 <p>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</p>
 <h2>專案報告書</h2>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
+<p><a href="https://pandoc.org/">https://pandoc.org/</a> 可以將 html 格式檔案轉為 Markdown</p>
+<p><a href="https://yihui.name/tinytex/">https://yihui.name/tinytex/</a> 則可以將 Markdown 轉為 pdf 格式檔案</p>
+<p>「假如」使用者可以將上述兩種工具導入可攜程式環境, 將可先設法將 config/content.htm 轉為 Markdown 檔案後, 再設法以協同模式編輯此一 Markdown 檔案, 以 Pandoc 及 TinyTex 將協同專案報告內容轉為一本 pdf 檔案格式的結案書.</p>
+<h3>Pandoc</h3>
+<p><a href="https://pandoc.org/">https://pandoc.org/</a></p>
+<p>使用</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">pandoc content.htm  --toc -t latex -V "CJKmainfont:SimSun" -V fontsize=12pt -V geometry:margin=1in --pdf-engine=xelatex -o content.pdf</pre>
+<p>可以將帶有中文字元的 content.htm 轉為 content.pdf, 但是以協同方式較不容易編輯管理 contet.htm, 因此若能先設法以 Pandoc 指令:</p>
+<pre class="brush:js;toolbar:false" contenteditable="false">pandoc content.htm -t markdown -o content.md</pre>
+<p>將 content.htm 轉為 conten.md, 之後再以協同方式編輯管理此一 conten.md 檔案,  以便使用:</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">pandoc content.md --toc -V "CJKmainfont:SimSun" -V fontsize=12pt -V geometry:margin=1in --pdf-engine=xelatex -o content.pdf</pre>
+<p>將 content.md 轉為最後出版的 pdf 格式結案報告.</p><h3>TinyTeX</h3>
+<p><a href="https://yihui.name/tinytex/">https://yihui.name/tinytex/</a></p>
+<p>TinyTeX 是一套縮小容量的 <a href="https://www.tug.org/texlive/">https://www.tug.org/texlive/</a>, 使用者安裝後, 可以透過</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">tlmgr option repository http://ftp.yzu.edu.tw/CTAN/systems/texlive/tlnet </pre>
+<p>指定安裝模組時所用的網站, 並且利用:</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">tlmgr search --global --file "/unicode-math.sty"</pre>
+<p>搜尋所缺少的模組, 並且利用:</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">tlmgr install 模組名稱</pre>
+<p>安裝所缺少的模組.</p>
