--- a/content/TinyTeX.html
+++ b/content/TinyTeX.html
@@ -147,25 +147,15 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">參數設計與繪圖 << <a href='參數設計與繪圖.html'>Previous</a> <a href='V-rep 動態模擬.html'>Next</a> >> V-rep 動態模擬<br /><h1>細部設計與 BOM</h1>
-<p>完成手足球零組件細部設計 (可參考 <a href="https://youtu.be/PgnvZV5s13c">https://youtu.be/PgnvZV5s13c</a> 中各項設計), 並將設計 BOM (Bill of Materials) 納入 CMSimfly 網際內容管理系統. (系統 BOM 文件整理)</p>
-<p>手足球 DIY 影片:</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/PgnvZV5s13c" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/DLchkFqzTNA" width="560"></iframe></p>
-<h4>參考資料:</h4>
-<p><a href="https://www.matterhackers.com/articles/how-to-build-a-foosball-table">https://www.matterhackers.com/articles/how-to-build-a-foosball-table</a></p>
-<p><a href="https://www.matterhackers.com/store/digital-designs/foosball-table-parts">https://www.matterhackers.com/store/digital-designs/foosball-table-parts</a></p>
-<h4>手足球零件格式說明</h4>
-<p>手足球零件格式說明</p>
-<h4>零件 BOM</h4>
-<p>手足球零組件材料表 (含零組件下載連結)</p>
-<h4>零件尺寸圖</h4>
-<p>零件尺寸圖</p>
-<h4>零件部分組裝圖</h4>
-<p>零件部分組裝圖</p>
-<h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p>
-<br />參數設計與繪圖 << <a href='參數設計與繪圖.html'>Previous</a> <a href='V-rep 動態模擬.html'>Next</a> >> V-rep 動態模擬</div>
+    <div id="tipue_search_content">Pandoc << <a href='Pandoc.html'>Previous</a> <br /><h1>TinyTeX</h1>
+<p><a href="https://yihui.name/tinytex/">https://yihui.name/tinytex/</a></p>
+<p>TinyTeX 是一套縮小容量的 <a href="https://www.tug.org/texlive/">https://www.tug.org/texlive/</a>, 使用者安裝後, 可以透過</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">tlmgr option repository http://ftp.yzu.edu.tw/CTAN/systems/texlive/tlnet </pre>
+<p>指定安裝模組時所用的網站, 並且利用:</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">tlmgr search --global --file "/unicode-math.sty"</pre>
+<p>搜尋所缺少的模組, 並且利用:</p>
+<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">tlmgr install 模組名稱</pre>
+<p>安裝所缺少的模組.</p><br />Pandoc << <a href='Pandoc.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
