--- a/content/專案報告書.html
+++ b/content/專案報告書.html
@@ -136,7 +136,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='各組期末報告說明.html'>各組期末報告說明</a><ul class='dropdown'><li><a href='H 標註降階程式.html'>H 標註降階程式</a><li><a href='期末協同專案 Q&A.html'>期末協同專案 Q&A</a></li></ul><li class='has-children'><a href='執行規劃.html'>執行規劃</a><ul class='dropdown'><li><a href='手足球系統模擬.html'>手足球系統模擬</a></li></ul><li class='has-children'><a href='設計與繪圖.html'>設計與繪圖</a><ul class='dropdown'><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a></li></ul><li class='has-children'><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><ul class='dropdown'><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li class='has-children'><a href='結案報告.html'>結案報告</a><ul class='dropdown'><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li><a href='專案報告書.html'>專案報告書</a></li>
+                     <li class='has-children'><a href='各組期末報告說明.html'>各組期末報告說明</a><ul class='dropdown'><li><a href='H 標註降階程式.html'>H 標註降階程式</a><li><a href='期末協同專案 Q&A.html'>期末協同專案 Q&A</a></li></ul><li class='has-children'><a href='執行規劃.html'>執行規劃</a><ul class='dropdown'><li><a href='github 課程.html'>github 課程</a><li><a href='手足球系統模擬.html'>手足球系統模擬</a></li></ul><li class='has-children'><a href='設計與繪圖.html'>設計與繪圖</a><ul class='dropdown'><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a></li></ul><li class='has-children'><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><ul class='dropdown'><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li class='has-children'><a href='結案報告.html'>結案報告</a><ul class='dropdown'><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li class='has-children'><a href='專案報告書.html'>專案報告書</a><ul class='dropdown'><li><a href='Pandoc.html'>Pandoc</a><li><a href='TinyTeX.html'>TinyTeX</a></li>
                       </ul>
                 </nav>
               </div>
@@ -147,8 +147,12 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">專案口頭簡報 << <a href='專案口頭簡報.html'>Previous</a> <br /><h1>專案報告書</h1>
-<p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p><br />專案口頭簡報 << <a href='專案口頭簡報.html'>Previous</a> </div>
+    <div id="tipue_search_content">專案口頭簡報 << <a href='專案口頭簡報.html'>Previous</a> <a href='Pandoc.html'>Next</a> >> Pandoc<br /><h1>專案報告書</h1>
+<p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
+<p><a href="https://pandoc.org/">https://pandoc.org/</a> 可以將 html 格式檔案轉為 Markdown</p>
+<p><a href="https://yihui.name/tinytex/">https://yihui.name/tinytex/</a> 則可以將 Markdown 轉為 pdf 格式檔案</p>
+<p>「假如」使用者可以將上述兩種工具導入可攜程式環境, 將可先設法將 config/content.htm 轉為 Markdown 檔案後, 再設法以協同模式編輯此一 Markdown 檔案, 以 Pandoc 及 TinyTex 將協同專案報告內容轉為一本 pdf 檔案格式的結案書.</p>
+<br />專案口頭簡報 << <a href='專案口頭簡報.html'>Previous</a> <a href='Pandoc.html'>Next</a> >> Pandoc</div>
         
     <!-- footer -->
       <div class="container">
