--- a/content/零組件尺寸分析.html
+++ b/content/零組件尺寸分析.html
@@ -136,7 +136,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='各組期末報告說明.html'>各組期末報告說明</a><ul class='dropdown'><li><a href='H 標註降階程式.html'>H 標註降階程式</a><li><a href='期末協同專案 Q&A.html'>期末協同專案 Q&A</a></li></ul><li class='has-children'><a href='執行規劃.html'>執行規劃</a><ul class='dropdown'><li><a href='手足球系統模擬.html'>手足球系統模擬</a></li></ul><li class='has-children'><a href='設計與繪圖.html'>設計與繪圖</a><ul class='dropdown'><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a></li></ul><li class='has-children'><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><ul class='dropdown'><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li class='has-children'><a href='結案報告.html'>結案報告</a><ul class='dropdown'><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li><a href='專案報告書.html'>專案報告書</a></li>
+                     <li class='has-children'><a href='各組期末報告說明.html'>各組期末報告說明</a><ul class='dropdown'><li><a href='H 標註降階程式.html'>H 標註降階程式</a><li><a href='期末協同專案 Q&A.html'>期末協同專案 Q&A</a></li></ul><li class='has-children'><a href='執行規劃.html'>執行規劃</a><ul class='dropdown'><li><a href='github 課程.html'>github 課程</a><li><a href='手足球系統模擬.html'>手足球系統模擬</a></li></ul><li class='has-children'><a href='設計與繪圖.html'>設計與繪圖</a><ul class='dropdown'><li><a href='零組件尺寸分析.html'>零組件尺寸分析</a><li><a href='參數設計與繪圖.html'>參數設計與繪圖</a><li><a href='細部設計與 BOM.html'>細部設計與 BOM</a></li></ul><li class='has-children'><a href='V-rep 動態模擬.html'>V-rep 動態模擬</a><ul class='dropdown'><li><a href='送球機構設計與模擬.html'>送球機構設計與模擬</a><li><a href='系統功能展示.html'>系統功能展示</a></li></ul><li class='has-children'><a href='結案報告.html'>結案報告</a><ul class='dropdown'><li><a href='專案口頭簡報.html'>專案口頭簡報</a><li class='has-children'><a href='專案報告書.html'>專案報告書</a><ul class='dropdown'><li><a href='Pandoc.html'>Pandoc</a><li><a href='TinyTeX.html'>TinyTeX</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,10 @@ init_mathjax();
         </header>
     <div id="tipue_search_content">設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖<br /><h1>零組件尺寸分析</h1>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
-<br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
+<p>足球員與足球尺寸配置分析:</p>
+<p><img alt="" height="415" src="./../images/solvespace_foosball_dim1.png" width="800"/></p>
+<p>球場側板控制桿間距:</p>
+<p><img caption="false" height="415" src="./../images/solvespace_foosball_dim2.png" width="800"/></p><br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
         
     <!-- footer -->
       <div class="container">
