fix image src bug

--- a/content/零組件尺寸分析.html
+++ b/content/零組件尺寸分析.html
@@ -150,9 +150,9 @@ init_mathjax();
     <div id="tipue_search_content">設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖<br /><h1>零組件尺寸分析</h1>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
 <p>足球員與足球尺寸配置分析:</p>
-<p><img alt="" height="415" src="/images/solvespace_foosball_dim1.png" width="800"/></p>
+<p><img alt="" height="415" src="./../images/solvespace_foosball_dim1.png" width="800"/></p>
 <p>球場側板控制桿間距:</p>
-<p><img caption="false" height="415" src="/images/solvespace_foosball_dim2.png" width="800"/></p><br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
+<p><img caption="false" height="415" src="./../images/solvespace_foosball_dim2.png" width="800"/></p><br />設計與繪圖 << <a href='設計與繪圖.html'>Previous</a> <a href='參數設計與繪圖.html'>Next</a> >> 參數設計與繪圖</div>
         
     <!-- footer -->
       <div class="container">
